# uds

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ProjectDependency.cmake
include/: uds.h
include/uds/: deq.h  dstr.h  err.h  hash.h  map.h  math.h  seq.h  set.h  str.h  vec.h
src/: str.c
test/: cute.h  deq.c  dstr.c  map.c  set.c  vec.c
